# Diana

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
homebrew/: README.md
homebrew/Casks/: diana.rb
homebrew/Formula/: diana.rb
packaging/: Info.plist.in
resources/: AppIcon.icns
scripts/: generate-appicon.sh  package-dmg.sh
src/: main.cpp
src/adapters/: app_adapter.h  claude_code_adapter.cpp  claude_code_adapter.h  claude_code_config.cpp  claude_code_config.h  claude_profile_store.cpp  claude_profile_store.h  codex_adapter.cpp  codex_adapter.h  codex_config.cpp  codex_config.h  codex_profile_store.cpp  codex_profile_store.h  config_exporter.cpp  config_exporter.h  config_manager.cpp  config_manager.h  marketplace_settings.cpp  marketplace_settings.h  opencode_adapter.cpp  opencode_adapter.h  opencode_config.cpp  opencode_config.h  opencode_profile_store.cpp  opencode_profile_store.h  profile_store.cpp  profile_store.h  session_config_store.cpp  session_config_store.h
src/app/: app_shell.cpp  app_shell.h  dockspace.cpp  dockspace.h
src/core/: event_queue.h  session_events.h  types.h
src/marketplace/: marketplace_client.cpp  marketplace_client.h  marketplace_panel.cpp  marketplace_panel.h  marketplace_types.h
src/metrics/: agent_token_store.cpp  agent_token_store.h  claude_usage_collector.cpp  claude_usage_collector.h  codex_usage_collector.cpp  codex_usage_collector.h  metrics_store.cpp  metrics_store.h  multi_metrics_store.cpp  multi_metrics_store.h  opencode_usage_collector.cpp  opencode_usage_collector.h
src/process/: process_runner.cpp  process_runner.h  session_controller.cpp  session_controller.h
src/terminal/: ansi_parser.cpp  ansi_parser.h  terminal_buffer.cpp  terminal_buffer.h  terminal_panel.cpp  terminal_panel.h  terminal_session.cpp  terminal_session.h  vterminal.cpp  vterminal.h
src/ui/: agent_config_panel.cpp  agent_config_panel.h  agent_token_panel.cpp  agent_token_panel.h  claude_code_panel.cpp  claude_code_panel.h  codex_panel.cpp  codex_panel.h  metrics_panel.cpp  metrics_panel.h  opencode_panel.cpp  opencode_panel.h  profiles_panel.cpp  profiles_panel.h  theme.cpp  theme.h  theme_macos.mm
tests/adapters/: test_codex_config.cpp  test_codex_profile_store.cpp  test_config_exporter.cpp  test_opencode_config.cpp  test_opencode_profile_store.cpp
tests/core/: test_event_queue.cpp
tests/metrics/: test_agent_token_store.cpp  test_claude_usage_collector.cpp  test_metrics_store.cpp  test_multi_metrics_store.cpp
